--- a/SampleLogin/app/src/main/res/values/strings.xml
+++ b/SampleLogin/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="et_enter_user_name">Enter User Name</string>
     <string name="et_enter_password">Enter password</string>
     <string name="submit">Submit</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
